// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`logo snapshot: Default 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 500px; height: 500px; background-color: transparent;"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: LargeSize 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 800px; height: 800px; background-color: transparent;"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SimpleLogo 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 500px; height: 500px; background-color: transparent;"
  >
    <img
      alt="Logo"
      src="/simple-logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SimpleLogoWithBlackBackground 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 500px; height: 500px; background-color: rgb(0, 0, 0);"
  >
    <img
      alt="Logo"
      src="/simple-logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SimpleLogoWithBlackBackgroundAndStars 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 500px; height: 500px; background-color: rgb(0, 0, 0);"
  >
    <img
      alt="Logo"
      src="/simple-logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
    <img
      alt="Stars background"
      src="/stars.svg"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; z-index: 1;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SimpleLogoWithStars 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 500px; height: 500px; background-color: transparent;"
  >
    <img
      alt="Logo"
      src="/simple-logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
    <img
      alt="Stars background"
      src="/stars.svg"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; z-index: 1;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SmallSize 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 300px; height: 300px; background-color: transparent;"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: WithBlackBackground 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 500px; height: 500px; background-color: rgb(0, 0, 0);"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: WithBlackBackgroundAndStars 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 500px; height: 500px; background-color: rgb(0, 0, 0);"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
    <img
      alt="Stars background"
      src="/stars.svg"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; z-index: 1;"
    />
  </div>
</div>
`;

exports[`logo snapshot: WithStars 1`] = `
<div>
  <div
    style="position: relative; display: inline-block; width: 500px; height: 500px; background-color: transparent;"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
    <img
      alt="Stars background"
      src="/stars.svg"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; z-index: 1;"
    />
  </div>
</div>
`;
